force-app/main/default/objects/Agr_Bar__c/fields/Agr_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Agr_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Nomes_dos_Assessores_Barra</relationshipName>
    <type>Lookup</type>
</CustomField>