force-app/main/default/objects/Agr_Bar__c/fields/Agr_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Agr_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Está ativo?</label>
    <type>Checkbox</type>
</CustomField>