force-app/main/default/objects/Agr_Bar__c/fields/Agr_PartnerOffice__c.field-meta.xml
<CustomField>
    <fullName>Agr_PartnerOffice__c</fullName>
    <label>Escritório</label>
    <length>255</length>
    <type>Text</type>
</CustomField>